--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-# Python virtual environment
-backend/venv/
-
-# Mac system files
+# === General ===
 .DS_Store
+Thumbs.db
+
+# === Python / Backend ===
+backend/venv/
+*.pyc
+__pycache__/
+
+# === React / Frontend ===
+frontend/node_modules/
+frontend/build/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# === Logs ===
+*.log
+
+# === IDE / Editor ===
+.vscode/
+.idea/
+*.swp
